# tpx3HitParser

./: .gitignore  .zenodo.json  300.cfg  LICENSE  README.md  correct_edge.py  default.cfg  requirements.txt  setup.py  tpx3HitParser.py
clusters/: __init__.py  find.py  freq_toa.py
clusters/clfind/: Cargo.toml  README.md  __init__.py  clfind_np.py  rustfmt.toml
clusters/clfind/src/: clfind.rs  lib.rs
events/: __init__.py  chip_edge_correct.py  localise.py  localize.py  predictions.py  super_resolution.py
frames/: __init__.py  build.py  output.py
lib/: __init__.py  config.py  constants.py  exceptions.py  io.py  log.py  misc.py
orchestration/: __init__.py  gpu.py  orchestrator.py  worker.py  writer.py
tp3hitparser/: __init__.py  tpx3HitParser.py
tp3hitparser/clusters/: __init__.py  find.py
tp3hitparser/clusters/clfind/: __init__.py
tp3hitparser/events/: __init__.py  localise.py
tp3hitparser/lib/: __init__.py  constants.py  io.py
tp3hitparser/orchestration/: __init__.py  gpu.py  orchestrator.py  worker.py  writer.py
tp3hitparser/tpx3format/: __init__.py  freq_tot.py  read.py
tpx3format/: __init__.py  freq_tot.py  read.py
tpx3hitparser/: 200kv-events-chip_edge.cfg  __init__.py  default.cfg  tpx3HitParser.py
tpx3hitparser/clusters/: __init__.py  find.py
tpx3hitparser/events/: __init__.py  chip_edge_correct.py  localise.py
tpx3hitparser/lib/: __init__.py  config.py  io.py  misc.py
tpx3hitparser/orchestration/: __init__.py  orchestrator.py  worker.py
tpx3hitparser/tpx3format/: __init__.py  freq_tot.py  read.py
(+2 files in other folders)
